# KG2

./: .env.example  .gitignore  LICENSE  Makefile  README.md  _check.sh  _check_env.sh  _dl_dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ihr_all.sh  run_ihr_r6a.sh
configs/: base.yaml
configs/ablation/: alpha_half.yaml  alpha_one.yaml  alpha_zero.yaml  binary_labels.yaml  e5_only.yaml  no_kg.yaml  pure_em.yaml  single_retriever.yaml
configs/datasets/: 2wikimultihopqa.yaml  d_dropout.yaml  hotpotqa.yaml  musique.yaml
configs/eval/: baseline_naive_rag.yaml  baseline_r1_searcher.yaml  baseline_rearag.yaml  baseline_self_rag.yaml  baseline_trace.yaml  baseline_zero_shot.yaml  kg_proweight.yaml
configs/retrieval/: e5_only_top50.yaml  hybrid_rrf_top50.yaml
configs/training/: phase1_silver.yaml  phase1_silver_try.yaml  phase2_prm.yaml  phase3_grpo.yaml  phase3_ppo.yaml  phase3_sft.yaml
docs/: R7_deploy_guide.md  R7_experiment_log.md  R7_progress_report.md  architecture.md  baselines.md  baselines_final.md  elite_sft_inference_test.md  experiment_history.md  fix_format_collapse.md  full_sft_inference_test.md  group_meeting_summary.md  kg_build_report.md  operation_guide.md  paper.md  paper_design.md  paper_design_new.md  problem_and_solutions.md  project_overview.md  r9_diagnosis.md  r9_final_comparison.md  r9_inference_examples.md  r9_v5_checklist.md  r9_v6_execution_plan.md  refactor_notes.md  reproducibility.md  rigor_extensions.md  修改建议.docx
indexes_smoke/bm25/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json  vocab.tokenizer.json
kgproweight/: __init__.py  version.py
kgproweight/config/: __init__.py  loader.py  schemas.py
kgproweight/eval/: __init__.py  alpha_analysis.py  baselines.py  data_efficiency.py  metrics.py  pred_processing.py  runner.py  stats.py  variance_validation.py
kgproweight/kg/: __init__.py  cache.py  coverage.py  entity_linker.py  kg_embeddings.py  kg_filter.py  wikidata_retriever.py
kgproweight/pipeline/: __init__.py  generators.py  kg_proweight_pipeline.py  no_kg_pipeline.py
kgproweight/retrieval/: __init__.py  bootstrap.py  hybrid.py  reranker.py
kgproweight/reward/: __init__.py  alpha_gate.py  composite_reward.py  ihr_judge.py  prm_annotator.py  prm_value_head.py  text_reward_model.py
kgproweight/training/: __init__.py  phase1_distill.py  phase2_prm.py  phase3_grpo.py  phase3_ppo.py  phase3_sft.py  reward_function.py  step_reward_ppo_trainer.py
kgproweight/utils/: __init__.py  flashrag_bootstrap.py  logging.py  paths.py  seed.py
scripts/: check_r9_cache.py  monitor_ppo.py  preflight_R7.py  r9_preflight.py
scripts/deploy/: _ssh.py  _ssh_lab.py  _verify_models.py  deploy_R7.py  preflight.py  requirements-lock.txt  run_all.sh  run_from_sft.sh  run_ppo.sh  run_retrain_eval.sh  setup_env.sh  start_train.sh  watch_train.sh
scripts/eval/: build_smoke_corpus.py  run_ablations.py  run_baselines.py  run_data_efficiency.py  run_ihr_judge.py  run_kg_proweight.py  run_smoke_compare.sh  run_variance_validation.py  sanity_check.py  (+1 more)
tests/: conftest.py  test_alpha_gate.py  test_baselines.py  test_composite_reward.py  test_dropout_loader.py  test_kg_retriever_cache.py  test_metrics.py  test_parse_teacher_output.py  test_pipeline_inference.py  test_prm_annotator.py
(+49 files in other folders)
